Fixed spacing on footer covering content.
The fixed footer was covering the bottom few lines
of content on every page, I added an 80px bottom
margin on 'body' and the problem was fixed, both
on the desktop view and mobile view.

* Added 80px margin-bottom to body on
  css/styles.css
* Fixed problem with footer covering up
  content.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+	margin-bottom: 80px;
+}
+
 .page-header {
 	margin-top: 0;
 }
@@ -8,4 +12,5 @@
 
 .featureImg {
 	margin-bottom: 15px;
+	width: 100%;
 }
